--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,15 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/app_logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/loading_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="200dp"
@@ -27,9 +29,9 @@
             android:fontFamily="@font/quicksand"
             android:gravity="center"
             android:text="@string/app_name"
+            android:textColor="#FFF"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#FFF"/>
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -37,7 +39,35 @@
             android:fontFamily="@font/quicksand"
             android:gravity="center"
             android:text="@string/protrike_tagline"
-            android:textSize="12sp"
-            android:textColor="#FFF"/>
+            android:textColor="#FFF"
+            android:textSize="12sp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/loading_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_logo">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand"
+            android:gravity="center"
+            android:text="Loading..."
+            android:textColor="#FFF"
+            android:textSize="12sp" />
+
+        <com.research.protrike.CustomViews.ProtrikeLoadingBar
+            android:id="@+id/loading_display"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
