--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="blue">#FF333AFF</color>
+    <color name="red_error">#FFFF8181</color>
     <color name="bg">#FFE4FFFE</color>
     <color name="item_bg">#FF33FFF7</color>
     <color name="clickables">#FF9133FF</color>
