--- a/app/src/main/res/layout/activity_new_contact.xml
+++ b/app/src/main/res/layout/activity_new_contact.xml
@@ -65,7 +65,8 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
                 android:hint="Contact Name"
-                app:counterMaxLength="6"
+                app:counterMaxLength="10"
+                app:counterEnabled="true"
                 app:hintTextColor="@android:color/black"
                 app:startIconDrawable="@drawable/name_icon">
 
@@ -73,7 +74,7 @@
                     android:id="@+id/contact_name_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLength="6"
+                    android:maxLength="10"
                     android:textColor="@android:color/black" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -85,6 +86,7 @@
                 android:layout_marginTop="10dp"
                 android:hint="Contact Number"
                 app:counterMaxLength="11"
+                app:counterEnabled="true"
                 app:hintTextColor="@android:color/black"
                 app:startIconDrawable="@drawable/contact_number_icon">
 
